added web args to lua

--- a/config/config.ini
+++ b/config/config.ini
@@ -20,4 +20,4 @@ Access-Control-Allow-Origin=*
 ; URLs followed by handlers
 ;
 [handlers]
-/bulkanalyticsupload.*=AnalyticsBulkUploadHandler
+/test=handlers/printWebArgs.lua
