--- a/config/config.ini
+++ b/config/config.ini
@@ -23,5 +23,7 @@ Access-Control-Allow-Origin=*
 /test=handlers/printWebArgs.lua
 
 [cgi]
-/test=printenv
-zz=ls
+/printenv=/home/pi/bin/printenv.sh
+ls=/home/pi/bin/ls.sh
+
+[static]
