--- a/config/config.ini
+++ b/config/config.ini
@@ -10,7 +10,7 @@ name=NEBOX-LOCAL
 
 ;
 [headers]
-Content-Type=application/json; charset=UTF-8
+;Content-Type=application/json; charset=UTF-8
 Access-Control-Allow-Origin=*
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -25,6 +25,7 @@ Access-Control-Allow-Origin=*
 [cgi]
 /printenv=/home/pi/bin/printenv.sh
 ls=/home/pi/bin/ls.sh
-lss=ls
+lz=ls
 
 [static]
+/=./static
